--- a/src/styles/schedule-hero.css
+++ b/src/styles/schedule-hero.css
@@ -5,7 +5,7 @@
   height: 60vw;
   max-height: 800px;
   padding: 1.5rem 5vw 4rem 5vw;
-  background-image: url('/Top_HERO.png');
+  background-image: url('/services/consult/hero.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
